## Process this file with automake to produce Makefile.in

current_dir = $(shell pwd)

bin_PROGRAMS =  \
	titania

titania_SOURCES =  \
	$(current_dir)/Titania/Applications/BrowserApplication/BrowserApplication.cpp \
	$(current_dir)/Titania/Applications/BrowserApplication/X3DBrowserApplication.cpp \
	$(current_dir)/Titania/Applications/BrowserApplication/X3DDBusInterface.cpp \
	$(current_dir)/Titania/Applications/main/main.cpp \
	$(current_dir)/Titania/Base/X3DBaseInterface.cpp \
	$(current_dir)/Titania/Base/X3DDialogInterface.cpp \
	$(current_dir)/Titania/Base/X3DEditorInterface.cpp \
	$(current_dir)/Titania/Base/X3DEditorObject.cpp \
	$(current_dir)/Titania/Base/X3DPanelInterface.cpp \
	$(current_dir)/Titania/Base/X3DRevealerInterface.cpp \
	$(current_dir)/Titania/Base/X3DUserInterface.cpp \
	$(current_dir)/Titania/Bits/Cairo.cpp \
	$(current_dir)/Titania/Bits/File.cpp \
	$(current_dir)/Titania/Bits/Pipe.cpp \
	$(current_dir)/Titania/Bits/String.cpp \
	$(current_dir)/Titania/Browser/BrowserSelection.cpp \
	$(current_dir)/Titania/Browser/BrowserWindow.cpp \
	$(current_dir)/Titania/Browser/IconFactory.cpp \
	$(current_dir)/Titania/Browser/MagicImport.cpp \
	$(current_dir)/Titania/Browser/RecentView.cpp \
	$(current_dir)/Titania/Browser/X3DBrowserEditor.cpp \
	$(current_dir)/Titania/Browser/X3DBrowserNotebook.cpp \
	$(current_dir)/Titania/Browser/X3DBrowserWindow.cpp \
	$(current_dir)/Titania/BrowserNotebook/BrowserPanel/BrowserPanel.cpp \
	$(current_dir)/Titania/BrowserNotebook/BrowserPanel/ViewpointObserver.cpp \
	$(current_dir)/Titania/BrowserNotebook/BrowserPanel/X3DBrowserPanel.cpp \
	$(current_dir)/Titania/BrowserNotebook/BrowserPanel/X3DBrowserPanelMenuBar.cpp \
	$(current_dir)/Titania/BrowserNotebook/NotebookPage/NotebookPage.cpp \
	$(current_dir)/Titania/BrowserNotebook/NotebookPage/X3DNotebookPage.cpp \
	$(current_dir)/Titania/BrowserNotebook/PanelMenu/PanelMenu.cpp \
	$(current_dir)/Titania/BrowserNotebook/RenderPanel/RenderPanel.cpp \
	$(current_dir)/Titania/BrowserNotebook/RenderPanel/RenderThread.cpp \
	$(current_dir)/Titania/BrowserNotebook/RenderPanel/VideoEncoder.cpp \
	$(current_dir)/Titania/BrowserNotebook/RenderPanel/X3DRenderPanel.cpp \
	$(current_dir)/Titania/ComposedWidgets/BackgroundTool.cpp \
	$(current_dir)/Titania/ComposedWidgets/EulerAdjustment.cpp \
	$(current_dir)/Titania/ComposedWidgets/GradientTool.cpp \
	$(current_dir)/Titania/ComposedWidgets/MFColorButton.cpp \
	$(current_dir)/Titania/ComposedWidgets/MFColorRGBAButton.cpp \
	$(current_dir)/Titania/ComposedWidgets/MFStringComboBoxText.cpp \
	$(current_dir)/Titania/ComposedWidgets/MFStringEntry.cpp \
	$(current_dir)/Titania/ComposedWidgets/MFStringGeoSystem.cpp \
	$(current_dir)/Titania/ComposedWidgets/MFStringTextView.cpp \
	$(current_dir)/Titania/ComposedWidgets/MFStringURLEntry.cpp \
	$(current_dir)/Titania/ComposedWidgets/MFStringURLWidget.cpp \
	$(current_dir)/Titania/ComposedWidgets/NameEntry.cpp \
	$(current_dir)/Titania/ComposedWidgets/NormalTool.cpp \
	$(current_dir)/Titania/ComposedWidgets/RangeTool.cpp \
	$(current_dir)/Titania/ComposedWidgets/RotationTool.cpp \
	$(current_dir)/Titania/ComposedWidgets/SFColorButton.cpp \
	$(current_dir)/Titania/ComposedWidgets/SFColorRGBAButton.cpp \
	$(current_dir)/Titania/ComposedWidgets/SFRotationAdjustment.cpp \
	$(current_dir)/Titania/ComposedWidgets/SFStringComboBoxText.cpp \
	$(current_dir)/Titania/ComposedWidgets/SFStringEntry.cpp \
	$(current_dir)/Titania/ComposedWidgets/SFStringTextView.cpp \
	$(current_dir)/Titania/ComposedWidgets/TexturePreview.cpp \
	$(current_dir)/Titania/ComposedWidgets/X3DGradientTool.cpp \
	$(current_dir)/Titania/ComposedWidgets/X3DMFStringEntry.cpp \
	$(current_dir)/Titania/ComposedWidgets/X3DMFStringWidget.cpp \
	$(current_dir)/Titania/Configuration/config.cpp \
	$(current_dir)/Titania/Configuration/Configuration.cpp \
	$(current_dir)/Titania/Dialogs/FileOpenDialog/FileImportAsExternProtoDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileOpenDialog/FileOpenDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileOpenDialog/FileOpenFontDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileOpenDialog/OpenFolderDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileOpenDialog/X3DFileOpenDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileSaveDialog/FileExportDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileSaveDialog/FileExportImageDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileSaveDialog/FileExportProtoDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileSaveDialog/FileSaveACopyDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileSaveDialog/FileSaveDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileSaveDialog/FileSaveVideoDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileSaveDialog/X3DBaseFileSaveDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileSaveDialog/X3DFileSaveDialog.cpp \
	$(current_dir)/Titania/Dialogs/FileSaveWarningDialog/FileSaveWarningDialog.cpp \
	$(current_dir)/Titania/Dialogs/FontChooserDialog/FontChooserDialog.cpp \
	$(current_dir)/Titania/Dialogs/MessageDialog/MessageDialog.cpp \
	$(current_dir)/Titania/Dialogs/OpenLocationDialog/OpenLocationDialog.cpp \
	$(current_dir)/Titania/Editors/AppearanceEditor/AppearanceEditor.cpp \
	$(current_dir)/Titania/Editors/AppearanceEditor/X3DBlendModeEditor.cpp \
	$(current_dir)/Titania/Editors/AppearanceEditor/X3DFillPropertiesEditor.cpp \
	$(current_dir)/Titania/Editors/AppearanceEditor/X3DLinePropertiesEditor.cpp \
	$(current_dir)/Titania/Editors/AppearanceEditor/X3DMaterialEditor.cpp \
	$(current_dir)/Titania/Editors/AppearanceEditor/X3DMaterialPaletteEditor.cpp \
	$(current_dir)/Titania/Editors/AppearanceEditor/X3DPointPropertiesEditor.cpp \
	$(current_dir)/Titania/Editors/AppearanceEditor/X3DUsedMaterialsEditor.cpp \
	$(current_dir)/Titania/Editors/BackgroundEditor/BackgroundEditor.cpp \
	$(current_dir)/Titania/Editors/BackgroundEditor/X3DBackgroundEditor.cpp \
	$(current_dir)/Titania/Editors/BackgroundImageEditor/BackgroundImage.cpp \
	$(current_dir)/Titania/Editors/BackgroundImageEditor/BackgroundImageEditor.cpp \
	$(current_dir)/Titania/Editors/BindableNodeEditor/BindableNodeEditor.cpp \
	$(current_dir)/Titania/Editors/BindableNodeList/BackgroundList.cpp \
	$(current_dir)/Titania/Editors/BindableNodeList/FogList.cpp \
	$(current_dir)/Titania/Editors/BindableNodeList/NavigationInfoList.cpp \
	$(current_dir)/Titania/Editors/BindableNodeList/ViewpointList.cpp \
	$(current_dir)/Titania/Editors/BrowserSizeEditor/BrowserSizeEditor.cpp \
	$(current_dir)/Titania/Editors/ExternalToolsEditor/ExternalTool.cpp \
	$(current_dir)/Titania/Editors/ExternalToolsEditor/ExternalToolsEditor.cpp \
	$(current_dir)/Titania/Editors/ExternalToolsEditor/X3DExternalToolsEditor.cpp \
	$(current_dir)/Titania/Editors/FilesEditor/FilesEditor.cpp \
	$(current_dir)/Titania/Editors/FogEditor/FogEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DArc2DEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DArcClose2DEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DCircle2DEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DDisk2DEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry2D/X3DRectangle2DEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DBoxEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DConeEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DCylinderEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DElevationGridEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DExtrusionEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geometry3D/X3DSphereEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/GeometryPropertiesEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Geospatial/X3DGeoElevationGridEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/NURBS/X3DNurbsCurveEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/NURBS/X3DNurbsPatchSurfaceEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/NURBS/X3DNurbsTrimmedSurfaceEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/Rendering/X3DIndexedLineSetEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/X3DColorNodeEditor.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/X3DGeometryTool.cpp \
	$(current_dir)/Titania/Editors/GeometryPropertiesEditor/X3DPrimitiveCountEditor.cpp \
	$(current_dir)/Titania/Editors/GridEditor/AngleGridTool.cpp \
	$(current_dir)/Titania/Editors/GridEditor/AxonometricGridTool.cpp \
	$(current_dir)/Titania/Editors/GridEditor/GridEditor.cpp \
	$(current_dir)/Titania/Editors/GridEditor/GridTool.cpp \
	$(current_dir)/Titania/Editors/GridEditor/X3DAngleEditor.cpp \
	$(current_dir)/Titania/Editors/GridEditor/X3DAxonometricGridEditor.cpp \
	$(current_dir)/Titania/Editors/GridEditor/X3DGridEditor.cpp \
	$(current_dir)/Titania/Editors/GridEditor/X3DGridTool.cpp \
	$(current_dir)/Titania/Editors/HistoryEditor/History.cpp \
	$(current_dir)/Titania/Editors/HistoryEditor/HistoryEditor.cpp \
	$(current_dir)/Titania/Editors/InlineEditor/InlineEditor.cpp \
	$(current_dir)/Titania/Editors/LayerEditor/LayerEditor.cpp \
	$(current_dir)/Titania/Editors/LibraryView/LibraryView.cpp \
	$(current_dir)/Titania/Editors/LightEditor/LightEditor.cpp \
	$(current_dir)/Titania/Editors/LightEditor/X3DDirectionalLightEditor.cpp \
	$(current_dir)/Titania/Editors/LightEditor/X3DPointLightEditor.cpp \
	$(current_dir)/Titania/Editors/LightEditor/X3DSpotLightEditor.cpp \
	$(current_dir)/Titania/Editors/ModelsPalette/ModelsPalette.cpp \
	$(current_dir)/Titania/Editors/MotionBlurEditor/MotionBlurEditor.cpp \
	$(current_dir)/Titania/Editors/NavigationInfoEditor/NavigationInfoEditor.cpp \
	$(current_dir)/Titania/Editors/NodeEditor/NodeEditor.cpp \
	$(current_dir)/Titania/Editors/NodeIndex/NodeIndex.cpp \
	$(current_dir)/Titania/Editors/NodePropertiesEditor/NodePropertiesEditor.cpp \
	$(current_dir)/Titania/Editors/NodePropertiesEditor/X3DExportedNodesEditor.cpp \
	$(current_dir)/Titania/Editors/NodePropertiesEditor/X3DImportedNodesEditor.cpp \
	$(current_dir)/Titania/Editors/NodePropertiesEditor/X3DUserDefinedFieldsEditor.cpp \
	$(current_dir)/Titania/Editors/PolygonColoringEditor/PolygonColoringEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DConeEmitterEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DExplosionEmitterEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DPointEmitterEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DPolylineEmitterEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleEmitter/X3DVolumeEmitterEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleSystem/DefaultPhysicsModelEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleSystem/ForcePhysicsModelEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleSystem/WindPhysicsModelEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleSystem/X3DColorRampNodeEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleSystem/X3DParticlePhysicsModelNodeEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/ParticleSystem/X3DParticlePhysicsModelNodeInterface.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/PrecisionPlacementPanel.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DBillboardEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DCollisionEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DEnvironmentalSensorEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DGeoLocationEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DGeometrySelectionEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DGeoTransformEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DLayoutEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DLODEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DParticleEmitterNodeEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DParticleSystemEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DSwitchEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DTextureEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DTextureProjectorParallelEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DTextureProjectorPerspectiveEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DTransformEditor.cpp \
	$(current_dir)/Titania/Editors/PrecisionPlacementPanel/X3DViewportEditor.cpp \
	$(current_dir)/Titania/Editors/ProjectsEditor/FileView.cpp \
	$(current_dir)/Titania/Editors/ProjectsEditor/OpenEditorsEditor.cpp \
	$(current_dir)/Titania/Editors/ProjectsEditor/ProjectEditor.cpp \
	$(current_dir)/Titania/Editors/ProjectsEditor/ProjectsEditor.cpp \
	$(current_dir)/Titania/Editors/PrototypeEditor/PrototypeEditor.cpp \
	$(current_dir)/Titania/Editors/ScenePropertiesEditor/ScenePropertiesEditor.cpp \
	$(current_dir)/Titania/Editors/ScenePropertiesEditor/X3DMetaDataEditor.cpp \
	$(current_dir)/Titania/Editors/ScenePropertiesEditor/X3DProfileComponentsEditor.cpp \
	$(current_dir)/Titania/Editors/ScenePropertiesEditor/X3DUnitEditor.cpp \
	$(current_dir)/Titania/Editors/ScenePropertiesEditor/X3DWorldInfoEditor.cpp \
	$(current_dir)/Titania/Editors/SculpToolEditor/SculpToolEditor.cpp \
	$(current_dir)/Titania/Editors/SculpToolEditor/X3DSculpToolBrushEditor.cpp \
	$(current_dir)/Titania/Editors/SculpToolEditor/X3DSculpToolBrushPaletteEditor.cpp \
	$(current_dir)/Titania/Editors/SoundEditor/SoundEditor.cpp \
	$(current_dir)/Titania/Editors/SoundEditor/X3DSoundSourceNodeEditor.cpp \
	$(current_dir)/Titania/Editors/TextEditor/TextEditor.cpp \
	$(current_dir)/Titania/Editors/TextEditor/X3DFontStyleNodeEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/TextureEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DComposedCubeMapTextureEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DComposedTexture3DEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DEnvironmentTextureNodeEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DGeneratedCubeMapTextureEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DImageCubeMapTextureEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DImageTexture3DEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DImageTextureEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DMovieTextureEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DMultiTextureEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DPixelTexture3DEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DPixelTextureEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTexture2DNodeEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTexture3DNodeEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTextureCoordinateGeneratorEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTextureNodeEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTexturePaletteEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTexturePropertiesEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTextureTransform3DEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTextureTransformEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTextureTransformMatrix3DEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DTextureTransformNodeEditor.cpp \
	$(current_dir)/Titania/Editors/TextureEditor/X3DUsedTexturesEditor.cpp \
	$(current_dir)/Titania/Editors/TextureMappingEditor/TextureMappingEditor.cpp \
	$(current_dir)/Titania/Editors/UndoHistoryEditor/UndoHistoryEditor.cpp \
	$(current_dir)/Titania/Editors/ViewpointEditor/ViewpointEditor.cpp \
	$(current_dir)/Titania/Editors/ViewpointEditor/X3DGeoViewpointEditor.cpp \
	$(current_dir)/Titania/Editors/ViewpointEditor/X3DOrthoViewpointEditor.cpp \
	$(current_dir)/Titania/Editors/ViewpointEditor/X3DViewpointEditor.cpp \
	$(current_dir)/Titania/Revealer/FogCoordinateEditor/FogCoordinateEditor.cpp \
	$(current_dir)/Titania/Revealer/GeometryEditor/GeometryEditor.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DAnimationEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DAppearanceEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DBackgroundEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DBackgroundImageEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DBackgroundSizeEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DBindableNodeEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DBindableNodeListInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DBrowserPanelInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DBrowserSizeEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DBrowserWindowInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DConsoleInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DDefaultPhysicsModelEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DExternalToolsEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DFileOpenDialogInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DFileSaveDialogInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DFileSaveWarningDialogInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DFilesEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DFogCoordinateEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DFogEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DFontChooserDialogInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DFooterInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DForcePhysicsModelEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DGeometryEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DGeometryPropertiesEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DGridEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DHistoryEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DInlineEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DLayerEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DLibraryViewInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DLightEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DMessageDialogInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DModelsPaletteInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DMotionBlurEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DNavigationInfoEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DNodeEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DNodeIndexInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DNodePropertiesEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DNotebookPageInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DOpenEditorsEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DOpenLocationDialogInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DOutlineEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DPanelMenuInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DPolygonColoringEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DPrecisionPlacementPanelInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DProjectEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DProjectsEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DPrototypeEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DRenderPanelInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DRouteGraphInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DRouteGraphPageInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DScenePropertiesEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DScriptEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DSculpToolEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DSidebarInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DSoundEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DTextEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DTextureEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DTextureMappingEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DUndoHistoryEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DViewpointEditorInterface.cpp \
	$(current_dir)/Titania/UserInterfaces/X3DWindPhysicsModelEditorInterface.cpp \
	$(current_dir)/Titania/Widgets/AnimationEditor/AnimationEditor.cpp \
	$(current_dir)/Titania/Widgets/Console/Console.cpp \
	$(current_dir)/Titania/Widgets/Console/X3DConsole.cpp \
	$(current_dir)/Titania/Widgets/Footer/Footer.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/CellRenderer/OutlineCellRenderer.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/CellRenderer/OutlineFields.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/CellRenderer/OutlineSeparator.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/CellRenderer/TextViewEditable.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/CellRenderer/X3DTextViewEditable.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/OutlineDragDrop.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/OutlineEditor.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/OutlineEditorDatabase.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/OutlineRouteGraph.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/OutlineSelection.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/OutlineTreeData.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/OutlineTreeModel.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/OutlineTreeObserver.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/OutlineTreeViewEditor.cpp \
	$(current_dir)/Titania/Widgets/OutlineEditor/X3DOutlineTreeView.cpp \
	$(current_dir)/Titania/Widgets/RouteGraph/RouteGraph.cpp \
	$(current_dir)/Titania/Widgets/RouteGraph/RouteGraphNode.cpp \
	$(current_dir)/Titania/Widgets/RouteGraph/RouteGraphPage.cpp \
	$(current_dir)/Titania/Widgets/RouteGraph/X3DRouteGraph.cpp \
	$(current_dir)/Titania/Widgets/RouteGraph/X3DRouteGraphPage.cpp \
	$(current_dir)/Titania/Widgets/ScriptEditor/ScriptEditor.cpp \
	$(current_dir)/Titania/Widgets/ScriptEditor/X3DScriptEditor.cpp \
	$(current_dir)/Titania/Widgets/ScriptEditor/X3DScriptEditorPreferences.cpp \
	$(current_dir)/Titania/Widgets/ScriptEditor/X3DScriptEditorSearch.cpp \
	$(current_dir)/Titania/Widgets/ScriptEditor/X3DScriptNodeEditor.cpp \
	$(current_dir)/Titania/Widgets/ScriptEditor/X3DShaderEditor.cpp \
	$(current_dir)/Titania/Widgets/Sidebar/Sidebar.cpp

titania_LDADD = $(TITANIA_LIBS) \
	$(TITANIA_GZSTREAM_LIBS) \
	$(TITANIA_SQLITE_LIBS) \
	$(TITANIA_STANDARD_LIBS) \
	$(TITANIA_STREAM_LIBS) \
	$(TITANIA_FTGL_LIBS) \
	$(TITANIA_X3D_LIBS)  \
	$(top_builddir)/libtitania-x3d/libtitania-x3d.la \
	$(top_builddir)/libtitania-ftgl/libtitania-ftgl.la \
	$(top_builddir)/libtitania-sqlite/libtitania-sqlite.la \
	$(top_builddir)/libtitania-standard/libtitania-standard.la \
	$(top_builddir)/libtitania-stream/libtitania-stream.la

AM_CPPFLAGS = $(TITANIA_CFLAGS) \
	$(TITANIA_GZSTREAM_CFLAGS) \
	$(TITANIA_SQLITE_CFLAGS) \
	$(TITANIA_STANDARD_CFLAGS) \
	$(TITANIA_STREAM_CFLAGS) \
	$(TITANIA_FTGL_CFLAGS) \
	$(TITANIA_X3D_CFLAGS)  \
	-I$(top_builddir)/libtitania-x3d \
	-I$(top_builddir)/libtitania-ftgl \
	-I$(top_builddir)/libtitania-sqlite \
	-I$(top_builddir)/libtitania-standard \
	-I$(top_builddir)/libtitania-stream

AM_LDFLAGS = -lX11

install-exec-hook:
	mkdir -m 755 -p $(DESTDIR)$(datadir)
	cp -r share/* $(DESTDIR)$(datadir)
	find $(DESTDIR)$(datadir)/titania/ -type d -exec chmod 755 {} \;
	find $(DESTDIR)$(datadir)/titania/ -type f -exec chmod 644 {} \;

run:
	$(builddir)/run.pl 2>&1
