## Process this file with automake to produce Makefile.in


lib_LTLIBRARIES =  \
	libtitania-ftgl.la

libtitania_ftgl_la_LIBADD = $(TITANIA_FTGL_LIBS) 

libtitania_ftgl_la_SOURCES =  \
	Titania/FTBuffer.cpp \
	Titania/FTCharmap.cpp \
	Titania/FTContour.cpp \
	Titania/FTFace.cpp \
	Titania/FTFont/FTBitmapFont.cpp \
	Titania/FTFont/FTBufferFont.cpp \
	Titania/FTFont/FTExtrudeFont.cpp \
	Titania/FTFont/FTFont.cpp \
	Titania/FTFont/FTFontGlue.cpp \
	Titania/FTFont/FTOutlineFont.cpp \
	Titania/FTFont/FTPixmapFont.cpp \
	Titania/FTFont/FTPolygonFont.cpp \
	Titania/FTFont/FTTextureFont.cpp \
	Titania/FTGlyph/FTBitmapGlyph.cpp \
	Titania/FTGlyph/FTBufferGlyph.cpp \
	Titania/FTGlyph/FTExtrudeGlyph.cpp \
	Titania/FTGlyph/FTGlyph.cpp \
	Titania/FTGlyph/FTGlyphGlue.cpp \
	Titania/FTGlyph/FTOutlineGlyph.cpp \
	Titania/FTGlyph/FTPixmapGlyph.cpp \
	Titania/FTGlyph/FTPolygonGlyph.cpp \
	Titania/FTGlyph/FTTextureGlyph.cpp \
	Titania/FTGlyphContainer.cpp \
	Titania/FTLayout/FTLayout.cpp \
	Titania/FTLayout/FTLayoutGlue.cpp \
	Titania/FTLayout/FTSimpleLayout.cpp \
	Titania/FTLibrary.cpp \
	Titania/FTPoint.cpp \
	Titania/FTSize.cpp \
	Titania/FTVectoriser.cpp

AM_CPPFLAGS = $(TITANIA_FTGL_CFLAGS) 
