## Process this file with automake to produce Makefile.in


lib_LTLIBRARIES =  \
	libtitania-ftgl.la

libtitania_ftgl_la_LIBADD = $(TITANIA_FTGL_LIBS) 

libtitania_ftgl_la_SOURCES =  \
	Titania/FTGL/Charmap.cpp \
	Titania/FTGL/Contour.cpp \
	Titania/FTGL/Face.cpp \
	Titania/FTGL/Font/Font.cpp \
	Titania/FTGL/Font/PolygonFont.cpp \
	Titania/FTGL/Glyph/Glyph.cpp \
	Titania/FTGL/Glyph/PolygonGlyph.cpp \
	Titania/FTGL/GlyphContainer.cpp \
	Titania/FTGL/Library.cpp \
	Titania/FTGL/Size.cpp \
	Titania/FTGL/Vector.cpp \
	Titania/FTGL/Vectorizer.cpp

AM_CPPFLAGS = $(TITANIA_FTGL_CFLAGS) 
